--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
                 >dla waszego biznesu</span
               >
             </h1>
-            <button type="button" class="main-section-header__btn">
+            <button
+              type="button"
+              class="main-section-header__btn"
+              data-modal-open
+            >
               Zamów usługe
             </button>
           </section>
@@ -384,5 +388,11 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="close-btn" data-modal-close>X</button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
