--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,9 @@
             </li>
 
             <li class="header-nav__item">
-              <a href="./portfolio.html" class="header-nav__link">Portfolio</a>
+              <a href="./portfolio.html" class="header-nav__link active-page"
+                >Portfolio</a
+              >
             </li>
             <li class="header-nav__item">
               <a href="./kontakt.html" class="header-nav__link">Kontakt</a>
