--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <nav class="header-nav">
           <ul class="header-nav__list">
             <li class="header-nav__item">
-              <a class="header-nav__link" href="./agencja.html">Agencja</a>
+              <a class="header-nav__link active-page" href="./index.html"
+                >Agencja</a
+              >
             </li>
 
             <li class="header-nav__item">
