--- a/portfolio.html
+++ b/portfolio.html
@@ -67,19 +67,29 @@
         <div>
           <ul class="portfolio-nav__list">
             <li class="portfolio-nav__item">
-              <button class="portfolio-nav__item--btn-design">Wszystkie</button>
+              <button type="button" class="portfolio-nav__item--btn-design">
+                Wszystkie
+              </button>
             </li>
             <li class="portfolio-nav__item">
-              <button class="portfolio-nav__item--btn-design">Strony</button>
+              <button type="button" class="portfolio-nav__item--btn-design">
+                Strony
+              </button>
             </li>
             <li class="portfolio-nav__item">
-              <button class="portfolio-nav__item--btn-design">Aplikacje</button>
+              <button type="button" class="portfolio-nav__item--btn-design">
+                Aplikacje
+              </button>
             </li>
             <li class="portfolio-nav__item">
-              <button class="portfolio-nav__item--btn-design">Dizajn</button>
+              <button type="button" class="portfolio-nav__item--btn-design">
+                Dizajn
+              </button>
             </li>
             <li class="portfolio-nav__item">
-              <button class="portfolio-nav__item--btn-design">Marketing</button>
+              <button type="button" class="portfolio-nav__item--btn-design">
+                Marketing
+              </button>
             </li>
           </ul>
           <ul class="portfolio__list">
