--- a/index.html
+++ b/index.html
@@ -182,27 +182,42 @@
               />
               <p class="team__item--header">John Doe</p>
               <p>Product Designer</p>
-              <div class="team-social-icon-div">
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#instagram-2"></use>
-                  </svg>
-                </div>
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#twitter-1"></use>
-                  </svg>
-                </div>
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#Vector1"></use>
-                  </svg>
-                </div>
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#linkedin-1"></use>
-                  </svg>
-                </div>
+
+              <div>
+                <ul class="team-social-icon-div">
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#instagram-2"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#twitter-1"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#Vector1"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#linkedin-1"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -215,27 +230,41 @@
               />
               <p class="team__item--header">John Doe</p>
               <p>Frontend Developer</p>
-              <div class="team-social-icon-div">
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#instagram-2"></use>
-                  </svg>
-                </div>
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#twitter-1"></use>
-                  </svg>
-                </div>
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#Vector1"></use>
-                  </svg>
-                </div>
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#linkedin-1"></use>
-                  </svg>
-                </div>
+              <div>
+                <ul class="team-social-icon-div">
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#instagram-2"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#twitter-1"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#Vector1"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#linkedin-1"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team__item">
@@ -247,27 +276,41 @@
               />
               <p class="team__item--header">John Doe</p>
               <p>Marketing</p>
-              <div class="team-social-icon-div">
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#instagram-2"></use>
-                  </svg>
-                </div>
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#twitter-1"></use>
-                  </svg>
-                </div>
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#Vector1"></use>
-                  </svg>
-                </div>
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#linkedin-1"></use>
-                  </svg>
-                </div>
+              <div>
+                <ul class="team-social-icon-div">
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#instagram-2"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#twitter-1"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#Vector1"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#linkedin-1"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team__item">
@@ -279,27 +322,41 @@
               />
               <p class="team__item--header">John Doe</p>
               <p>UI Designer</p>
-              <div class="team-social-icon-div">
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#instagram-2"></use>
-                  </svg>
-                </div>
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#twitter-1"></use>
-                  </svg>
-                </div>
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#Vector1"></use>
-                  </svg>
-                </div>
-                <div class="icon-team-social-div">
-                  <svg class="icon-team" width="20" height="20">
-                    <use href="./images/icons.svg#linkedin-1"></use>
-                  </svg>
-                </div>
+              <div>
+                <ul class="team-social-icon-div">
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#instagram-2"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#twitter-1"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#Vector1"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="icon-team-link" href="">
+                      <div class="icon-team-social-div">
+                        <svg class="icon-team" width="20" height="20">
+                          <use href="./images/icons.svg#linkedin-1"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -307,37 +364,58 @@
       </section>
       <section class="container section clients">
         <h2 class="clients__header">Nasi klienci</h2>
-        <div class="clients__div">
-          <div class="clients__bg-and-border">
-            <svg class="icon-team" width="170" height="92">
-              <use href="./images/icons.svg#Logo"></use>
-            </svg>
-          </div>
-          <div class="clients__bg-and-border">
-            <svg class="icon-team" width="170" height="92">
-              <use href="./images/icons.svg#Logo1"></use>
-            </svg>
-          </div>
-          <div class="clients__bg-and-border">
-            <svg class="icon-team" width="170" height="92">
-              <use href="./images/icons.svg#Logo2"></use>
-            </svg>
-          </div>
-          <div class="clients__bg-and-border">
-            <svg class="icon-team" width="170" height="92">
-              <use href="./images/icons.svg#Logo3"></use>
-            </svg>
-          </div>
-          <div class="clients__bg-and-border">
-            <svg class="icon-team" width="170" height="92">
-              <use href="./images/icons.svg#Logo4"></use>
-            </svg>
-          </div>
-          <div class="clients__bg-and-border">
-            <svg class="icon-team" width="170" height="92">
-              <use href="./images/icons.svg#Logo5"></use>
-            </svg>
-          </div>
+
+        <div>
+          <ul class="clients__div">
+            <li>
+              <a class="clients-link" href=""
+                ><div class="clients__bg-and-border">
+                  <svg class="icon-team" width="170" height="92">
+                    <use href="./images/icons.svg#Logo"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a class="clients-link" href="">
+                <div class="clients__bg-and-border">
+                  <svg class="icon-team" width="170" height="92">
+                    <use href="./images/icons.svg#Logo1"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a class="clients-link" href="">
+                <div class="clients__bg-and-border">
+                  <svg class="icon-team" width="170" height="92">
+                    <use href="./images/icons.svg#Logo2"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a class="clients-link" href="">
+                <div class="clients__bg-and-border">
+                  <svg class="icon-team" width="170" height="92">
+                    <use href="./images/icons.svg#Logo3"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a class="clients-link" href="">
+                <div class="clients__bg-and-border">
+                  <svg class="icon-team" width="170" height="92">
+                    <use href="./images/icons.svg#Logo4"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a class="clients-link" href="">
+                <div class="clients__bg-and-border">
+                  <svg class="icon-team" width="170" height="92">
+                    <use href="./images/icons.svg#Logo5"></use>
+                  </svg></div
+              ></a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
@@ -365,28 +443,41 @@
         </div>
         <div class="footer__socials">
           <p>dołącz do nas</p>
-          <div class="footer__social-icon-div">
-            <div class="icon-footer-social-div">
-              <svg class="footer__icon" width="20" height="20">
-                <use href="./images/icons.svg#instagram-2"></use>
-              </svg>
-            </div>
-            <div class="icon-footer-social-div">
-              <svg class="footer__icon" width="20" height="20">
-                <use href="./images/icons.svg#twitter-1"></use>
-              </svg>
-            </div>
-            <div class="icon-footer-social-div">
-              <svg class="footer__icon" width="20" height="20">
-                <use href="./images/icons.svg#Vector1"></use>
-              </svg>
-            </div>
-            <div class="icon-footer-social-div">
-              <svg class="footer__icon" width="20" height="20">
-                <use href="./images/icons.svg#linkedin-1"></use>
-              </svg>
-            </div>
-          </div>
+
+          <ul class="footer__social-icon-div">
+            <li>
+              <a class="icon-footer-link" href=""
+                ><div class="icon-footer-social-div">
+                  <svg class="footer__icon" width="20" height="20">
+                    <use href="./images/icons.svg#instagram-2"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a class="icon-footer-link" href="">
+                <div class="icon-footer-social-div">
+                  <svg class="footer__icon" width="20" height="20">
+                    <use href="./images/icons.svg#twitter-1"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a class="icon-footer-link" href="">
+                <div class="icon-footer-social-div">
+                  <svg class="footer__icon" width="20" height="20">
+                    <use href="./images/icons.svg#Vector1"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a class="icon-footer-link" href=""
+                ><div class="icon-footer-social-div">
+                  <svg class="footer__icon" width="20" height="20">
+                    <use href="./images/icons.svg#linkedin-1"></use>
+                  </svg></div
+              ></a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
