--- a/portfolio.html
+++ b/portfolio.html
@@ -286,28 +286,41 @@
         </div>
         <div class="footer__socials">
           <p>dołącz do nas</p>
-          <div class="footer__social-icon-div">
-            <div class="icon-footer-social-div">
-              <svg class="footer__icon" width="20" height="20">
-                <use href="./images/icons.svg#instagram-2"></use>
-              </svg>
-            </div>
-            <div class="icon-footer-social-div">
-              <svg class="footer__icon" width="20" height="20">
-                <use href="./images/icons.svg#twitter-1"></use>
-              </svg>
-            </div>
-            <div class="icon-footer-social-div">
-              <svg class="footer__icon" width="20" height="20">
-                <use href="./images/icons.svg#Vector1"></use>
-              </svg>
-            </div>
-            <div class="icon-footer-social-div">
-              <svg class="footer__icon" width="20" height="20">
-                <use href="./images/icons.svg#linkedin-1"></use>
-              </svg>
-            </div>
-          </div>
+
+          <ul class="footer__social-icon-div">
+            <li>
+              <a class="icon-footer-link" href=""
+                ><div class="icon-footer-social-div">
+                  <svg class="footer__icon" width="20" height="20">
+                    <use href="./images/icons.svg#instagram-2"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a class="icon-footer-link" href="">
+                <div class="icon-footer-social-div">
+                  <svg class="footer__icon" width="20" height="20">
+                    <use href="./images/icons.svg#twitter-1"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a class="icon-footer-link" href="">
+                <div class="icon-footer-social-div">
+                  <svg class="footer__icon" width="20" height="20">
+                    <use href="./images/icons.svg#Vector1"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a class="icon-footer-link" href=""
+                ><div class="icon-footer-social-div">
+                  <svg class="footer__icon" width="20" height="20">
+                    <use href="./images/icons.svg#linkedin-1"></use>
+                  </svg></div
+              ></a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
